DEV-003: Adding reservation and actions logging functionalities
FilesSafeReserve changes
* Added models: ReservationModel, DirectoryModel, FileModel and VirtualSafeDetailsModel.
* Changed associations between existing models
* Added the functionality of backing up files and folders in the page
* Added repositories to each new model
* Added ILoggerService and LoggerService, that are intended for saving actions in logs

FilesSafeReserve.Tests changes
* Added tests to the repositories of each new model and modified for the modified ones
* Deleted TestLogFactory, TestLogOperationFactory and TestVirtualSafeFactory.
* Created TestsVirtualSafeFactory

ShyryiFileSystemLibrary changes
* Renamed: DirectoryModel to ShyDirectoryEntity, FileModel to ShyFileEntity and FileSystemItemModel to ShyFsEntity, so changed all dependent entities accordingly, such as mappers, tests, and so on
* Added extension classes for working with the file system, files and folders

--- a/FilesSafeReserve/FilesSafeReserve/Components/Pages/CreateSafePage/CreateSafePage.razor
+++ b/FilesSafeReserve/FilesSafeReserve/Components/Pages/CreateSafePage/CreateSafePage.razor
@@ -94,7 +94,7 @@
     private async Task OnCreateClick()
     {
         if (VirtualSafeRepo.ToList()
-                           .Where(s => s.Path == ViewModel.VirtualSafe.Path)
+                           .Where(s => s.Path.Contains(ViewModel.VirtualSafe.Path))
                            .Count() is 0)
         {
             await VirtualSafeRepo.AddAsync(
@@ -103,23 +103,29 @@
                     Name = ViewModel.VirtualSafe.Name,
                     Description = ViewModel.VirtualSafe.Description,
                     Path = ViewModel.VirtualSafe.Path,
-                    Logs =
-                    [
-                        new()
-                        {
-                            StartTimestamp = DateTime.Now,
-                            EndTimestamp = DateTime.Now,
-                            LogOperations =
-                            [
-                                new()
-                                {
-                                    IsSucceeded = true,
-                                    Type = LogOperationModel.OperationsTypes.CreateVirtualSafe,
-                                    PerformTimestamp = DateTime.Now,
-                                }
-                            ]
-                        }
-                    ]
+                    Details =
+                    new()
+                    {
+                        Logs =
+                        [
+                            new()
+                            {
+                                StartTimestamp = DateTime.Now,
+                                EndTimestamp = DateTime.Now,
+                                Operations =
+                                [
+                                    new()
+                                    {
+                                        IsSucceeded = true,
+                                        ItemPath = ViewModel.VirtualSafe.Path,
+                                        Type = LogOperationModel.Types.CreateVirtualSafe,
+                                        PerformTimestamp = DateTime.Now,
+                                    }
+                                ]
+                            }
+                        ]
+                    },
+                    Reservation = new()
                 });
 
             await ViewModel.SuccessModal.ShowAsync();
