--- a/src/FilesSafeReserve.UI/Components/Layout/NavMenu.razor
+++ b/src/FilesSafeReserve.UI/Components/Layout/NavMenu.razor
@@ -25,7 +25,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="SmartphonePage">
+            <NavLink class="nav-link" href="smartphone">
                 <div class="item-icon">
                     <Icon class="item-icon" Name="IconName.Phone"></Icon>
                 </div> Smartphone
