--- a/src/FilesSafeReserve.UI/Components/Pages/SmartphonePage/SmartphonePage.razor.css
+++ b/src/FilesSafeReserve.UI/Components/Pages/SmartphonePage/SmartphonePage.razor.css
@@ -1,1 +1,223 @@
-﻿
+﻿.main-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.header-container {
+    padding-top: 15px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 10px;
+    color: white;
+    margin-bottom: 20px;
+}
+
+.gradient-background {
+    background: linear-gradient(90deg, #08c5d7, #2778d2, #6d27d2);
+    background-size: 600% 600%;
+    animation: GradientAnim 20s ease infinite;
+}
+
+.virtual-safes-container {
+    width: 100%;
+    border-radius: 10px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.virtual-safes-header-container {
+    margin: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+    .virtual-safes-header-container h5 {
+        padding: 10px;
+        background: white;
+        border-radius: 10px;
+    }
+
+.virtual-safes-elements-container {
+    width: 100%;
+}
+
+.virtual-safes-element-container {
+    background: white;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+}
+
+.virtual-safes-element-data {
+    padding: 10px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+}
+
+.virtual-safes-element-icon {
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.virtual-safes-element-name {
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.virtual-safes-element-btns {
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
+}
+
+.virtual-safes-element-select {
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.smartphones-container {
+    width: 100%;
+    border-radius: 10px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.smartphones-header-container {
+    margin: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+    .smartphones-header-container h5 {
+        padding: 10px;
+        background: white;
+        border-radius: 10px;
+    }
+
+.smartphones-elements-container {
+    width: 100%;
+}
+
+.smartphones-element-container {
+    background: white;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+}
+
+.smartphones-element-data {
+    padding: 10px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+}
+
+.smartphones-element-icon {
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.smartphones-element-name {
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.smartphones-element-btns {
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
+}
+
+.smartphones-element-reserve {
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.loader-container{
+    margin: 10px;
+    width: 100%;
+}
+
+.loader {
+    width: 100%;
+    height: 10px;
+    display: inline-block;
+    position: relative;
+    background: #8FB7E9;
+    overflow: hidden;
+}
+
+    .loader::after {
+        content: '';
+        width: 192px;
+        height: 10px;
+        background: #060270;
+        position: absolute;
+        top: 0;
+        left: 0;
+        box-sizing: border-box;
+        animation: animloader 2s linear infinite;
+    }
+
+@keyframes animloader {
+    0% {
+        left: 0;
+        transform: translateX(-100%);
+    }
+
+    100% {
+        left: 100%;
+        transform: translateX(0%);
+    }
+}
+
+@keyframes GradientAnim {
+    0% {
+        background-position: 0% 49%
+    }
+
+    50% {
+        background-position: 100% 52%
+    }
+
+    100% {
+        background-position: 0% 49%
+    }
+}
